...
  String get notesGraphTitle => 'Graph View';

  @override
  String get notesGraphEmpty => 'No notes available for graph.';

  @override
  String get notesMyTitle => 'My Notes';

  @override
  String get notesNew => 'New Note';

  @override
  String get notesEdit => 'Edit Note';
...
  String get notesUntitledNote => 'Untitled Note';

  @override
  String get notesPickColor => 'Pick a Color';

  @override
  String get settingsTitle => 'Settings';

  @override
  String get settingsMaterialYou => 'Use Material You';

  @override
  String get settingsMaterialYouSubtitle => 'Follow system dynamic colors';
...
  String get settingsLanguageJapanese => 'Japanese';

  @override
  String get settingsLanguageIndonesian => 'Indonesian';

  @override
  String get settingsTrash => 'Trash';

  @override
  String get settingsCancel => 'Cancel';

  @override
  String get settingsDelete => 'Delete';

  @override
  String get settingsRestore => 'Restore';

  @override
  String get settingsDeletePermanently => 'Delete Permanently';

  @override
  String get settingsErrorLoadingAutoBackup =>
...
  String get settingsAreYouSure => 'Are you sure?';

  @override
  String get settingsEmptyTrashQuestion => 'Empty Trash?';

  @override
  String get settingsTrashIsEmpty => 'Trash is empty.';

  @override
  String settingsTrashDeleteSubtitleReady(int days) {
    return 'Deleted (auto-delete in $days days)';
  }

...
